--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Курс по маникюру - Инструктор Ирена</title>
-    <link rel="stylesheet" href="styles.css">
+    <head>
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600&display=swap">
+        <link rel="stylesheet" href="styles.css">
+    </head>
+    
 </head>
 <body>
 
